# dbt-duckdb-project

./: .env  Makefile  README.md  main.tf  pyproject.toml  terraform.tfstate
transform/pypi_metrics/: dbt_project.yml  dev.duckdb  packages.yml  profile.yml
transform/pypi_metrics/macros/: export_partition_data.sql
transform/pypi_metrics/models/: daily_stats.sql  sources.yml
transform/pypi_metrics/tests/: test_daily_stats.sql
