[project]
name = "dbt-duckdb-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb[md] (>=1.9.2,<2.0.0)",
    "dbt (>=1.0.0.38.31,<2.0.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
